--- a/Jpa-Study/src/main/resources/templates/OrdersDetail/EditOrderDetail.html
+++ b/Jpa-Study/src/main/resources/templates/OrdersDetail/EditOrderDetail.html
@@ -10,7 +10,7 @@
 <br/>
 <div class = "width:80%">
 
-<form th:action = "@{/SaveEdit}" th:object="${itemForm}" method = "post" class = "form-horizontal">
+<form th:action = "@{'/SaveEdit?OrderDetailId='+${OrderDetailToEdit.id}+'&OrderId='+${OrderDetailToEdit.order.id}}" th:object="${itemForm}" method = "post" class = "form-horizontal">
 	<div class = "form-group">
 		<label for =  "itemName" class = "col-sm-2 control-label">商品名称</label>
 		<div class = "col-sm-10">
